--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -15,8 +15,8 @@
          tenancy: default
          state: "{{state}}"
       register: vpcout
-    - debug:
-        var: vpcout
+   # - debug:
+   #     var: vpcout
 
     - name: create public subnet 1 in zone1
       ec2_vpc_subnet:
@@ -29,3 +29,26 @@
         resource_tags:
           Name: vprofile-pubsub1
       register: pubsub1out
+
+    - name: create public subnet 2 in zone2
+         ec2_vpc_subnet:
+           vpc_id: "{{vpcout.vpc.id}}"
+           region: "{{region}}"
+           az: "{{zone2}}"
+           state: "{{state}}"
+           cidr: "{{PubSub2Cidr}}"
+           map_public: yes
+           resource_tags:
+             Name: vprofile-pubsub2
+         register: pubsub2out
+    - name: create public subnet 3 in zone3
+         ec2_vpc_subnet:
+           vpc_id: "{{vpcout.vpc.id}}"
+           region: "{{region}}"
+           az: "{{zone3}}"
+           state: "{{state}}"
+           cidr: "{{PubSub3Cidr}}"
+           map_public: yes
+           resource_tags:
+             Name: vprofile-pubsub3
+         register: pubsub3out
