--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -52,3 +52,38 @@
            resource_tags:
              Name: vprofile-pubsub3
       register: pubsub3out
+
+    - name: create private subnet 1 in zone1
+          ec2_vpc_subnet:
+            vpc_id: "{{vpcout.vpc.id}}"
+            region: "{{region}}"
+            az: "{{zone1}}"
+            state: "{{state}}"
+            cidr: "{{PrivSub1Cidr}}"
+            map_public: yes
+            resource_tags:
+              Name: vprofile-privsub1
+          register: privsub1out
+
+        - name: create private subnet 2 in zone2
+          ec2_vpc_subnet:
+               vpc_id: "{{vpcout.vpc.id}}"
+               region: "{{region}}"
+               az: "{{zone2}}"
+               state: "{{state}}"
+               cidr: "{{PrivSub2Cidr}}"
+               map_public: yes
+               resource_tags:
+                 Name: vprofile-privsub2
+          register: privsub2out
+        - name: create private subnet 3 in zone3
+          ec2_vpc_subnet:
+               vpc_id: "{{vpcout.vpc.id}}"
+               region: "{{region}}"
+               az: "{{zone3}}"
+               state: "{{state}}"
+               cidr: "{{PrivSub3Cidr}}"
+               map_public: yes
+               resource_tags:
+                 Name: vprofile-privsub3
+          register: privsub3out
