--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -87,3 +87,12 @@
                resource_tags:
                  Name: vprofile-privsub3
       register: privsub3out
+
+    - name: Internet Gateway Setup
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}
+        region: "{{region}}"
+        state: "{{state}}"
+        resource_tags:
+         Name: vprofie-igw
+      register: igw_out
