--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -90,7 +90,7 @@
 
     - name: Internet Gateway Setup
       ec2_vpc_igw:
-        vpc_id: "{{vpcout.vpc.id}}
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: "{{state}}"
         resource_tags:
