--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -111,3 +111,25 @@
         - dest: 0.0.0.0/0
           gateway_id: "{{igw_out.gateway_id}}"
       register: pubRT_out
+    - name: Create new nat gateway and allocate new EIP
+      ec2_vpc_nat_gateway:
+         state: "{{state}}"
+         subnet_id: "{{pubsub1out.subnet.id}}"
+         wait: yes
+         region: "{{region}}"
+         if_exist_do_not_create: true
+      register: NATGW_out
+    - name: set up private subnet route table
+      ec2_vpc_route_table:
+       vpc_id: "{{vpcout.vpc.id}}"
+       region: "{{region}}"
+       tags:
+         Name: vprofile-privRT
+       subnets:
+         - "{{privsub1out.subnet.id}}"
+         - "{{privsub2out.subnet.id}}"
+         - "{{privsub3out.subnet.id}}"
+       routes:
+         - dest: 0.0.0.0/0
+           gateway_id: "{{NATGW_out.nat_ateway_id}}"
+      register: privRT_out
