--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -131,5 +131,5 @@
          - "{{privsub3out.subnet.id}}"
        routes:
          - dest: 0.0.0.0/0
-           gateway_id: "{{NATGW_out.nat_ateway_id}}"
+           gateway_id: "{{NATGW_out.nat_gateway_id}}"
       register: privRT_out
