--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -133,3 +133,18 @@
          - dest: 0.0.0.0/0
            gateway_id: "{{NATGW_out.nat_gateway_id}}"
       register: privRT_out
+    - debug:
+       var: "{{item}}"
+     loop:
+      - vpcout.vpc.id
+      - pubsub1out.subnet.id
+      - pubsub2out.subnet.id
+      - pubsub3out.subnet.id
+      - privsub1out.subnet.id
+      - privsub2out.subnet.id
+      - privsub3out.subnet.id
+      - igw_out.gateway_id
+      - pubRT_out.route_table.id
+      - NATGW_out.nat_gateway_id
+      - privRT_out.route_table.id
+
