--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -147,4 +147,20 @@
       - pubRT_out.route_table.id
       - NATGW_out.nat_gateway_id
       - privRT_out.route_table.id
-
+    - set_fact:
+       vpcid: "{{vpcout.vpc.id}}"
+       pubsub1id: "{{pubsub1out.subnet.id}}"
+       pubsub2id: "{{pubsub2out.subnet.id}}"
+       pubsub3id: "{{pubsub3out.subnet.id}}"
+       privsub1id: "{{privsub1out.subnet.id}}"
+       privsub2id: "{{privsub2out.subnet.id}}"
+       privsub3id: "{{privsub3out.subnet.id}}"
+       igwid: "{{igw_out.gateway_id}}"
+       pubRTid: "{{pubRT_out.route_table.id}}"
+       NATGWid: "{{NATGW_out.nat_gateway_id}}"
+       privRTid: "{{privRT_out.route_table.id}}"
+       cacheable: yes
+    - name: Create varible file for vpc output
+      copy:
+        content: "vpcid: {{vpcout.vpc.id}}\npubsub1id: {{pubsub1out.subnet.id}}\npubsub2id: {{pubsub2out.subnet.id}}\npubsub3id: {{pubsub3out.subnet.id}}\nprivsub1id: {{privsub1out.subnet.id}}\nprivsub2id: {{privsub2out.subnet.id}}\nprivsub3id: {{privsub3out.subnet.id}}\nigwid: {{igw_out.gateway_id}}\npubRTid: {{pubRT_out.route_table.id}}\nNATGWid: {{NATGW_out.nat_gateway_id}}\nprivRTid: {{privRT_out.route_table.id}}"
+        dest: vars/output_vars
