--- a/bastion_instance.yml
+++ b/bastion_instance.yml
@@ -49,4 +49,5 @@
          Project: vprofile
          Owner: Devops Team
       group_id: "{{BastionSG_out.group_id}}"
+      vpc_subnet_id: "{{pubsub1id}}"
      register: bastionHost_out
