--- a/bastion_instance.yml
+++ b/bastion_instance.yml
@@ -23,7 +23,7 @@
       ec2_group:
        name: Bastion-host-sg
        description: Allow port 22 from everywhere and all port within sg
-       region: "{{rgion}}"
+       region: "{{region}}"
        vpc_id: "{{vpcid}}"
        rules:
         - proto: tcp
