--- a/bastion_instance.yml
+++ b/bastion_instance.yml
@@ -54,3 +54,9 @@
        group_id: "{{BastionSG_out.group_id}}"
        vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out
+    - name: Insert/update "BastionSGid" in vars/output_vars
+       blockinfile:
+         path: vars/output_vars
+         backup: yes
+         block: |
+           BastionSGid: {{BastionSG_out.group_id}}
