--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -48,3 +48,14 @@
             from_port: 22
             to_port: 22
             group_id: "{{BastionSGid}}"
+      register: vproStackSG_out
+    - name: Update Security group with its own sg id
+      ec2_group:
+           name: vprostack-sg
+           description: Allow all rules within sg
+           region: "{{region}}"
+           vpc_id: "{{vpcid}}"
+           purge_rules: no
+           rules:
+             - proto: all
+               group_id: "{{vproStackSG_out.group_id}}"
