--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -59,8 +59,8 @@
            rules:
              - proto: all
                group_id: "{{vproStackSG_out.group_id}}"
-     - name: Creating Nginx web01
-       ec2:
+    - name: Creating Nginx web01
+      ec2:
         key_name: vprokey
         region: "{{region}}"
         instance_type: t2.micro
@@ -78,9 +78,9 @@
            Owner: Devops Team
         group_id: "{{vproStackSG_out.group_id}}"
         vpc_subnet_id: "{{privsub1id}}"
-     register: web01_out
-   - name: Creating tomcat web01
-     ec2:
+      register: web01_out
+    - name: Creating tomcat web01
+      ec2:
        key_name: vprokey
        region: "{{region}}"
        instance_type: t2.micro
@@ -98,9 +98,9 @@
           Owner: Devops Team
        group_id: "{{vproStackSG_out.group_id}}"
        vpc_subnet_id: "{{privsub1id}}"
-     register: app01_out
-   - name: Creating memcache mc01
-        ec2:
+      register: app01_out
+    - name: Creating memcache mc01
+      ec2:
           key_name: vprokey
           region: "{{region}}"
           instance_type: t2.micro
@@ -118,9 +118,9 @@
              Owner: Devops Team
           group_id: "{{vproStackSG_out.group_id}}"
           vpc_subnet_id: "{{privsub1id}}"
-        register: mc01_out
-   - name: Creating rabbitmq web01
-        ec2:
+      register: mc01_out
+    - name: Creating rabbitmq web01
+      ec2:
           key_name: vprokey
           region: "{{region}}"
           instance_type: t2.micro
@@ -138,9 +138,9 @@
              Owner: Devops Team
           group_id: "{{vproStackSG_out.group_id}}"
           vpc_subnet_id: "{{privsub1id}}"
-        register: rmq01_out
-   - name: Creating tomcat web01
-        ec2:
+      register: rmq01_out
+    - name: Creating mysql db01
+      ec2:
           key_name: vprokey
           region: "{{region}}"
           instance_type: t2.micro
@@ -158,6 +158,6 @@
              Owner: Devops Team
           group_id: "{{vproStackSG_out.group_id}}"
           vpc_subnet_id: "{{privsub1id}}"
-        register: db01_out
-      - debug:
+      register: db01_out
+    - debug:
           var: db01_out
