--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -144,7 +144,7 @@
           key_name: vprokey
           region: "{{region}}"
           instance_type: t2.micro
-          image: "{{msql_ami}}"
+          image: "{{mysql_ami}}"
           wait: yes
           wait_timeout: 300
           instance_tags:
@@ -160,4 +160,4 @@
           vpc_subnet_id: "{{privsub1id}}"
       register: db01_out
     - debug:
-          var: db01_out
+         var: db01_out
