--- a/provision-stack/ansible.cfg
+++ b/provision-stack/ansible.cfg
@@ -2,6 +2,8 @@
 inventory = inventory-vpro
 host_key_checking = False
 forks = 5
+remote_user = ubuntu
+private_key_file = ./loginkey_vpro.pem
 log_path = ./ansible.log_path
 
 [privilege_escalation]
