--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -201,7 +201,7 @@
              rmq01 ansible_host={{rmq01_out.tagged_instances[0].private_ip}}
              mc01 ansible_host={{mc01_out.tagged_instances[0].private_ip}}
              db01 ansible_host={{db01_out.tagged_instances[0].private_ip}}
-             cntl ansible_host: 127.0.0.1 ansible_connection=local
+             cntl ansible_host=127.0.0.1 ansible_connection=local
 
              [websrvgrp]
              web01
