--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -1,34 +1,71 @@
-- name: Install RabbitMQ
+---
+- name: Install & Setup RabbitMQ with user
   hosts: rmqsrvgrp
-  become: yes
-
+  gather_facts: no
   tasks:
+    - name: Install Erlang Repository Package
+      apt:
+        deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
+      tags:
+        - package
+
+    - name: Add an Erlang Solution public Key
+      apt_key:
+        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+        state: present
+      tags:
+        - package
+
     - name: Install Erlang
       apt:
         name: erlang
+        update_cache: yes
+        cache_valid_time: 86400
         state: present
-      when: ansible_distribution == 'Ubuntu'  # Adjust for other OS distributions
+      tags:
+        - package
 
-    - name: Install RabbitMQ package
-      package:
+    - name: Add an Apt signing key, uses whichever key is at the URL
+      apt_key:
+        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+        state: present
+      tags:
+        - package
+
+    - apt_repository:
+        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+        state: present
+      tags:
+        - package
+
+    - name: Install Rabbit MQ
+      apt:
         name: rabbitmq-server
         state: present
-      when: ansible_distribution == 'Ubuntu'  # Adjust for other OS distributions
+        update_cache: yes
+      tags:
+        - package
 
-    - name: Enable and start RabbitMQ service
+
+    - name: Start & Enable RMQ
       service:
         name: rabbitmq-server
         state: started
         enabled: yes
-    - name: config setup
+      tags:
+        - svc
+
+    - name: Config setup
       copy:
         content: |
           [{rabbit, [{loopback_users, []}]}].
         dest: /etc/rabbitmq/rabbitmq.config
       notify:
-         - Restart RMQ
+        - Restart RMQ
       tags:
         - conf
+
+
     - rabbitmq_user:
         user: test
         password: test
@@ -41,16 +78,19 @@
         - Restart RMQ
       tags:
         - conf
-    - name: Enables the rabbitmq-management plugin
+
+
+    - name: Enables the rabbitmq_management plugin
       rabbitmq_plugin:
-         names: rabbitmq_management
-         state: enabled
+        names: rabbitmq_management
+        state: enabled
       notify:
         - Restart RMQ
       tags:
         - package
+
   handlers:
     - name: Restart RMQ
       service:
-         name: rabbitmq-server
-         state: restarted
+        name: rabbitmq-server
+        state: restarted
