--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -1,56 +1,96 @@
 ---
-- name: Install & setup RabbitMQ with user
+- name: Install & Setup RabbitMQ with user
   hosts: rmqsrvgrp
+  gather_facts: no
   tasks:
-    - name: Install Erlang Repository package
+    - name: Install Erlang Repository Package
       apt:
         deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
-    - name: Add an Erlang solution public key
+      tags:
+        - package
+
+    - name: Add an Erlang Solution public Key
       apt_key:
         url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
         state: present
+      tags:
+        - package
+
     - name: Install Erlang
       apt:
-       name: erlang
-       update_cache: yes
-       state: present
-    - name: primary RabbitMQ signing key
-      shell: 'curl -1sLf "https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc" | sudo gpg --dearmor | sudo tee /usr/share/keyrings/com.github.rabbitmq.signing.gpg > /dev/null'
-    - name: Launchpad PPA signing key for apt
-      shell: 'curl -1sLf "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xf77f1eda57ebb1cc" | sudo gpg --dearmor | sudo tee /usr/share/keyrings/net.launchpad.ppa.rabbitmq.erlang.gpg > /dev/null'
-    - name: updating
-      shell: 'apt-get update'
-    - name: installing RabbitMq-server
+        name: erlang
+        update_cache: yes
+        cache_valid_time: 86400
+        state: present
+      tags:
+        - package
+
+    - name: Add an Apt signing key, uses whichever key is at the URL
+      apt_key:
+        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+        state: present
+      tags:
+        - package
+
+    - apt_repository:
+        repo: deb https://dl.bintray.com/rabbitmq/debian bionic main
+        state: present
+      tags:
+        - package
+
+    - name: Install Rabbit MQ
       apt:
-       name: rabbitmq-server
-       state: present
-       update_cache: yes
-    - name: Restarts and enables RMQ
+        name: rabbitmq-server
+        state: present
+        update_cache: yes
+      tags:
+        - package
+
+
+    - name: Start & Enable RMQ
       service:
-         name: rabbitmq-server
-         state: started
-         enabled: yes
-    - name: config setup
+        name: rabbitmq-server
+        state: started
+        enabled: yes
+      tags:
+        - svc
+
+    - name: Config setup
       copy:
-       content: |
-        [{rabbit, [{loopback_users, []}]}].
-       dest: /etc/rabbitmq/rabbitmq.config
+        content: |
+          [{rabbit, [{loopback_users, []}]}].
+        dest: /etc/rabbitmq/rabbitmq.config
+      notify:
+        - Restart RMQ
+      tags:
+        - conf
+
 
     - rabbitmq_user:
-         user: test
-         password: test
-         configure_priv: .*
-         read_priv: .*
-         write_priv: .*
-         tags: administrator
-         state: present
+        user: test
+        password: test
+        configure_priv: .*
+        read_priv: .*
+        write_priv: .*
+        tags: administrator
+        state: present
+      notify:
+        - Restart RMQ
+      tags:
+        - conf
+
 
     - name: Enables the rabbitmq_management plugin
       rabbitmq_plugin:
-         names: rabbitmq_management
-         state: enabled
+        names: rabbitmq_management
+        state: enabled
+      notify:
+        - Restart RMQ
+      tags:
+        - package
 
-    - name: restart rmq
+  handlers:
+    - name: Restart RMQ
       service:
-         name: rabbitmq-server
-         state: restarted
+        name: rabbitmq-server
+        state: restarted
