--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -34,7 +34,7 @@
 
     - apt_repository:
         url: https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -
-        command: 'echo "deb https://dl.bintray.com/rabbitmq/debian bionic main" | sudo tee /etc/apt/sources.list.d/bintray.rabbitmq.list'
+        command: echo "deb https://dl.bintray.com/rabbitmq/debian bionic main" | sudo tee /etc/apt/sources.list.d/bintray.rabbitmq.list
       tags:
         - package
 
