--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -1,65 +1,26 @@
 ---
-- name: Install & Setup RabbitMQ with user
+- name: Install RabbitMQ on Ubuntu 18.04
   hosts: rmqsrvgrp
-  gather_facts: no
+  become: yes
+
   tasks:
-    - name: Install Erlang Repository Package
-      apt:
-        deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
-      tags:
-        - package
-
-    - name: Add an Erlang Solution public Key
-      apt_key:
-        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
+    - name: Add RabbitMQ APT repository
+      apt_repository:
+        repo: "deb https://dl.bintray.com/rabbitmq/debian bionic main"
         state: present
-      tags:
-        - package
-
-    - name: Install Erlang
-      apt:
-        name: erlang
+        filename: "bintray.rabbitmq.list"
         update_cache: yes
-        cache_valid_time: 86400
-        state: present
-      tags:
-        - package
 
-    - name: Add an Apt signing key, uses whichever key is at the URL
+    - name: Import RabbitMQ signing key
       apt_key:
-        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+        url: "https://www.rabbitmq.com/rabbitmq-release-signing-key.asc"
         state: present
-      tags:
-        - package
 
-    - name: installing dependancies for rmq
-      command: echo 'deb http://www.rabbitmq.com/debian/ testing main' | sudo tee /etc/apt/sources.list.d/rabbitmq.list
-
-    - name: adding rmq key
-
-      shell: "wget -O- https://www.rabbitmq.com/rabbitmq-release-signing-key.asc | sudo apt-key add -"
-      tags:
-        - package
-    - name: updating
-      apt:
-         update_cache: yes
-
-    - name: Install Rabbit MQ
+    - name: Install RabbitMQ package
       apt:
         name: rabbitmq-server
         state: present
-        update_cache: yes
-      tags:
-        - package
 
-
-    - name: Start & Enable RMQ
-      service:
-        name: rabbitmq-server
-        state: started
-        enabled: yes
-      tags:
-        - svc
 
     - name: Config setup
       copy:
