--- a/provision-stack/rabbitmq.yml
+++ b/provision-stack/rabbitmq.yml
@@ -1,26 +1,59 @@
+
 ---
-- name: Install RabbitMQ on Ubuntu 18.04
+- name: Install & Setup RabbitMQ with user
   hosts: rmqsrvgrp
-  become: yes
-
+  gather_facts: no
   tasks:
-    - name: Add RabbitMQ APT repository
-      apt_repository:
-        repo: "deb https://dl.bintray.com/rabbitmq/debian bionic main"
-        state: present
-        filename: "bintray.rabbitmq.list"
-        update_cache: yes
+    - name: Install Erlang Repository Package
+      apt:
+        deb: https://packages.erlang-solutions.com/erlang-solutions_1.0_all.deb
+      tags:
+        - package
 
-    - name: Import RabbitMQ signing key
+    - name: Add an Erlang Solution public Key
       apt_key:
-        url: "https://www.rabbitmq.com/rabbitmq-release-signing-key.asc"
+        url: https://packages.erlang-solutions.com/ubuntu/erlang_solutions.asc
         state: present
+      tags:
+        - package
 
-    - name: Install RabbitMQ package
+    - name: Install Erlang
+      apt:
+        name: erlang
+        update_cache: yes
+        cache_valid_time: 86400
+        state: present
+      tags:
+        - package
+
+    - name: Add an Apt signing key, uses whichever key is at the URL
+      apt_key:
+        url: https://github.com/rabbitmq/signing-keys/releases/download/2.0/rabbitmq-release-signing-key.asc
+        state: present
+      tags:
+        - package
+
+    - name: adding rabbitmq server dependancies
+      shell: "curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.deb.sh | sudo bash"
+      tags:
+        - package
+
+    - name: Install Rabbit MQ
       apt:
         name: rabbitmq-server
         state: present
+        update_cache: yes
+      tags:
+        - package
 
+
+    - name: Start & Enable RMQ
+      service:
+        name: rabbitmq-server
+        state: started
+        enabled: yes
+      tags:
+        - svc
 
     - name: Config setup
       copy:
